# rustopia

./: .gitignore  .travis.yml  Cargo.toml  README.md
rcal/src/: main.rs
rcat/: Cargo.toml
rls/src/: main.rs
rosetta/: Cargo.toml  factorial.rs  fibonacci.rs  hamming.rs  handle_signal.rs  http.rs  https.rs  sieve_of_eratosthenes.rs
rosetta/src/: factorial
rsort/: Cargo.toml  main
rsort/src/: main.rs
shelltools/: rhead.rs  rtail.rs
shelltools/rcal/: Cargo.toml
shelltools/rls/: Cargo.toml
