[package]
name = "rustopia"
version = "0.1.0"
authors = ["Matt Gathu <mattgathu@gmail.com>"]

[dependencies]
clap = "2.24.2"
libc = "0.2.23"

[[bin]]
name = "factorial"
path = "rosetta/factorial.rs"

[[bin]]
name = "ackermann"
path = "rosetta/ackermann.rs"

[[bin]]
name = "fibonacci"
path = "rosetta/fibonacci.rs"

[[bin]]
name = "bitwiseio"
path = "rosetta/bitwiseio.rs"

[[bin]]
name = "sieve"
path = "rosetta/sieve_of_eratosthenes.rs"

[[bin]]
name = "rcal"
path = "shelltools/rcal.rs"

[[bin]]
name = "rcat"
path = "shelltools/rcat.rs"

[[bin]]
name = "rls"
path = "shelltools/rls.rs"

[[bin]]
name = "rsort"
path = "shelltools/rsort.rs"

